[package]
name = "bootloader"
version = "0.1.0"
authors = ["karthickai <karthickps.ai@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
as-slice = "0.1.0"
cortex-m = "0.6.0"
cortex-m-rt = "0.6.8"
nb = "0.1.2"
stm32f7 = "0.9.0"
panic-halt = "0.2.0"


[dependencies.stm32f7xx-hal]
git = "https://github.com/stm32-rs/stm32f7xx-hal.git"
branch = "master"
version = "0.1.0"
features = ["rt", "stm32f767"] # replace the model of your microcontroller here

[dev-dependencies]
micromath = "1.0.0"
cortex-m-semihosting = "0.3.5"
